[project]
name = "pvquery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Elijah Passmore", email = "elijah.passmore@wattmaven.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
pvquery = "pvquery:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
